[gd_scene load_steps=12 format=3 uid="uid://bhuuq6rx2deim"]

[ext_resource type="Script" path="res://Enemys/enemy_basic.gd" id="1_pqrwr"]
[ext_resource type="Texture2D" uid="uid://ygurearppnbw" path="res://icon.svg" id="2_io6jc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8i2py"]
size = Vector2(112, 114)

[sub_resource type="Animation" id="Animation_7km1j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_io6jc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lh56n"]
resource_name = "enemy_dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_io6jc"), ExtResource("2_io6jc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.5)]
}

[sub_resource type="Animation" id="Animation_vucyw"]
resource_name = "enemy_idel"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_io6jc"), ExtResource("2_io6jc"), ExtResource("2_io6jc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9), Vector2(0.9, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_214ct"]
_data = {
"RESET": SubResource("Animation_7km1j"),
"enemy_dead": SubResource("Animation_lh56n"),
"enemy_idel": SubResource("Animation_vucyw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqhh8"]
size = Vector2(112, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4sgy"]
size = Vector2(1450, 35)

[sub_resource type="CanvasTexture" id="CanvasTexture_rucbq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rq4hm"]

[node name="Enemy_1" type="CharacterBody2D" groups=["enemies_group"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_pqrwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -57)
shape = SubResource("RectangleShape2D_8i2py")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.713726, 0, 0.654902, 1)
texture = ExtResource("2_io6jc")
offset = Vector2(0, -64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
libraries = {
"": SubResource("AnimationLibrary_214ct")
}

[node name="enemy_1_hitbox" type="Area2D" parent="." groups=["enemies_group"]]
visible = false
position = Vector2(0, -58)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_1_hitbox"]
shape = SubResource("RectangleShape2D_oqhh8")

[node name="vision" type="Area2D" parent="."]

[node name="left" type="CollisionShape2D" parent="vision"]
position = Vector2(-760, -64)
shape = SubResource("RectangleShape2D_w4sgy")

[node name="rigth" type="CollisionShape2D" parent="vision"]
position = Vector2(760, -64)
shape = SubResource("RectangleShape2D_w4sgy")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = -160.0
offset_right = 50.0
offset_bottom = -148.0

[node name="hp_bar" type="TextureProgressBar" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 80.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_rucbq")
texture_progress = SubResource("CanvasTexture_rq4hm")
tint_under = Color(0.101961, 0.101961, 0.101961, 1)
tint_progress = Color(0, 1, 0.117647, 1)

[connection signal="area_entered" from="enemy_1_hitbox" to="." method="_on_enemy_1_hitbox_area_entered"]
[connection signal="area_exited" from="enemy_1_hitbox" to="." method="_on_enemy_1_hitbox_area_exited"]
[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
